# tracklms-to-qti-results

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .tasks.jsonl  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agent-ruleset.json  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  run_cli.py  run_verify.py  verify.ps1
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
agent-rules-local/: project-rules.md
docs/: cli-output.schema.json  input-spec.md  output-spec.md
docs/test-cases/: choice.csv  choice.qti.xml  descriptive.csv  descriptive.qti.xml
src/: cli.ts  converter.ts  index.ts
src/tracklms_to_qti_results/: __init__.py  __main__.py  cli.py  converter.py
test/: run-tests.ts
tests/: test_cli.py  test_conversion.py  test_scoring.py
tests/fixtures/: README.md  assessment-test.qti.xml  choice.csv  choice.qti.xml  cloze.csv  cloze.qti.xml  descriptive.csv  descriptive.qti.xml  item-map.csv
tests/fixtures/items/: Q1.qti.xml  Q2.qti.xml  item-001.qti.xml  item-002.qti.xml  item-003.qti.xml  item-004.qti.xml
