[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracklms-to-qti-results"
description = "Convert Track LMS exports into QTI 3.0 Results Reporting XML."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "metyatech" }]
keywords = ["tracklms", "qti", "qti-results"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/metyatech/tracklms-to-qti-results"
Repository = "https://github.com/metyatech/tracklms-to-qti-results"
Issues = "https://github.com/metyatech/tracklms-to-qti-results/issues"

[project.scripts]
tracklms-to-qti-results = "tracklms_to_qti_results.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "tracklms_to_qti_results.version.__version__" }

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["tests/.tmp_cli"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
per-file-ignores = { "run_cli.py" = ["E402"], "tests/*" = ["E402"] }

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
