[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracklms-to-qti-results"
description = "Convert Track LMS exports into QTI 3.0 Results Reporting XML."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "metyatech" }]
keywords = ["tracklms", "qti", "qti-results"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.7.0",
  "defusedxml>=0.7.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/metyatech/tracklms-to-qti-results"
Repository = "https://github.com/metyatech/tracklms-to-qti-results"
Issues = "https://github.com/metyatech/tracklms-to-qti-results/issues"

[project.scripts]
tracklms-to-qti-results = "tracklms_to_qti_results.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "tracklms_to_qti_results.version.__version__" }

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["tests/.tmp_cli"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "S",    # flake8-bandit
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "C4",   # flake8-comprehensions
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "ERA",  # eradicate
  "PL",   # pylint
  "TRY",  # tryceratops
  "PERF", # perflint
  "RUF",  # ruff-specific rules
]
ignore = [
  "TRY003", # Avoid specifying long messages outside the exception class
]
per-file-ignores = { "run_cli.py" = ["E402"], "tests/*" = ["E402", "S101", "S603"] }

[tool.ruff.lint.pylint]
max-args = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
